fixed load more buttons and fixed rollback alignment on clusters (#780)

--- a/ui/src/css/atoms/button.scss
+++ b/ui/src/css/atoms/button.scss
@@ -221,10 +221,10 @@ button {
    *
    *
    *********************************/
-  &__loadMore{
+  &__expandadble {
     margin: 0;
     border-radius: 0;
-    width: 315px;
+    width: 200px;
     height: 25px;
     background: transparent;
     box-shadow: none;
@@ -235,7 +235,7 @@ button {
         text-decoration: underline;
       }
     }
-    &--up {
+    &--collapse {
       background: url('~Images/icons/up-arrow-azure.svg') no-repeat  calc(50% + 50px) 5px;
       background-size: 20px;
 
@@ -245,7 +245,7 @@ button {
         content: "Collapse";
       }
     }
-    &--down {
+    &--expand {
       background: url('~Images/icons/down-arrow-azure.svg') no-repeat calc(50% + 50px) 5px;
       background-size: 20px;
 
@@ -255,8 +255,48 @@ button {
         content: "Expand";
       }
     }
+  }
 
 
+  /**********************************
+   * feature buttons
+   *
+   *
+   *********************************/
+  &__loadMore{
+    margin: 0;
+    border-radius: 0;
+    width: 250px;
+    background: $azure;
+    height: 30px;
+    box-shadow: none;
+
+    &:hover {
+      box-shadow: none;
+      &:before {
+        text-decoration: underline;
+      }
+    }
+    &--up {
+      background: $azure url('~Images/icons/up-arrow-white.svg') no-repeat  calc(50% + 50px) 5px;
+      background-size: 20px;
+
+      &:before {
+        color: $white;
+        line-height: 16px;
+        content: "Previous";
+      }
+    }
+    &--down {
+      background: $azure url('~Images/icons/down-arrow-white.svg') no-repeat calc(50% + 50px) 5px;
+      background-size: 20px;
+
+      &:before {
+        color: $white;
+        line-height: 16px;
+        content: "Next";
+      }
+    }
   }
 
   &__delete {
